Process is now a dev dependency
In prod, the dependency is packaged in the PHAR file.

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "type": "library",
   "license": "MIT",
   "bin": ["bin/parallel.php"],
-  "require": {
+  "require-dev": {
     "symfony/process": "3.*"
   }
 }
